[package]
name = "frontmatter-parser"
version = "1.0.0"
edition = "2024"
description = "A tool to parse frontmatter from markdown files"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
walkdir = "2.4"
thiserror = "1.0"
